--- a/environment.yml
+++ b/environment.yml
@@ -2,11 +2,124 @@ name: revasbot
 channels:
   - defaults
 dependencies:
-  - tensorflow
-  - pandas
-  - selenium
-  - pylint
-  - pyaml
-  - python=3.9.4
-  - autopep8
-  - openpyxl
+  - _tflow_select=2.3.0
+  - abseil-cpp=20210324.2
+  - absl-py=0.15.0
+  - aiohttp=3.8.1
+  - aiosignal=1.2.0
+  - astor=0.8.1
+  - astroid=2.9.0
+  - astunparse=1.6.3
+  - async-timeout=4.0.1
+  - async_generator=1.10
+  - attrs=21.2.0
+  - autopep8=1.6.0
+  - blas=1.0
+  - blinker=1.4
+  - bottleneck=1.3.2
+  - brotlipy=0.7.0
+  - ca-certificates=2021.10.26
+  - cachetools=4.2.2
+  - certifi=2021.10.8
+  - cffi=1.15.0
+  - charset-normalizer=2.0.4
+  - click=8.0.3
+  - colorama=0.4.4
+  - cryptography=3.4.8
+  - dataclasses=0.8
+  - et_xmlfile=1.1.0
+  - flatbuffers=2.0.0
+  - frozenlist=1.2.0
+  - gast=0.4.0
+  - giflib=5.2.1
+  - google-auth=1.33.0
+  - google-auth-oauthlib=0.4.1
+  - google-pasta=0.2.0
+  - grpcio=1.42.0
+  - h11=0.12.0
+  - h5py=3.6.0
+  - hdf5=1.10.6
+  - icc_rt=2019.0.0
+  - icu=68.1
+  - idna=3.3
+  - importlib-metadata=4.8.2
+  - intel-openmp=2021.4.0
+  - isort=5.9.3
+  - jpeg=9d
+  - keras-preprocessing=1.1.2
+  - lazy-object-proxy=1.6.0
+  - libcurl=7.80.0
+  - libpng=1.6.37
+  - libprotobuf=3.14.0
+  - libssh2=1.9.0
+  - markdown=3.3.4
+  - mccabe=0.6.1
+  - mkl=2021.4.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.1
+  - mkl_random=1.2.2
+  - multidict=5.1.0
+  - numexpr=2.7.3
+  - numpy=1.21.2
+  - numpy-base=1.21.2
+  - oauthlib=3.1.1
+  - openpyxl=3.0.9
+  - openssl=1.1.1l
+  - opt_einsum=3.3.0
+  - outcome=1.1.0
+  - pandas=1.3.4
+  - pip=21.2.4
+  - platformdirs=2.4.0
+  - protobuf=3.14.0
+  - pyasn1=0.4.8
+  - pyasn1-modules=0.2.8
+  - pycodestyle=2.8.0
+  - pycparser=2.21
+  - pyjwt=2.1.0
+  - pylint=2.12.2
+  - pyopenssl=21.0.0
+  - pyreadline=2.1
+  - pysocks=1.7.1
+  - python=3.9.7
+  - python-dateutil=2.8.2
+  - python-flatbuffers=1.12
+  - pytz=2021.3
+  - pyyaml=6.0
+  - requests=2.26.0
+  - requests-oauthlib=1.3.0
+  - rsa=4.7.2
+  - scipy=1.7.1
+  - setuptools=58.0.4
+  - six=1.16.0
+  - snappy=1.1.8
+  - sniffio=1.2.0
+  - sortedcontainers=2.4.0
+  - sqlite=3.36.0
+  - tensorboard=2.6.0
+  - tensorboard-data-server=0.6.0
+  - tensorboard-plugin-wit=1.6.0
+  - tensorflow=2.6.0
+  - tensorflow-base=2.6.0
+  - tensorflow-estimator=2.6.0
+  - termcolor=1.1.0
+  - toml=0.10.2
+  - trio=0.18.0
+  - typing-extensions=3.10.0.2
+  - typing_extensions=3.10.0.2
+  - tzdata=2021e
+  - urllib3=1.26.7
+  - vc=14.2
+  - vs2015_runtime=14.27.29016
+  - werkzeug=2.0.2
+  - wheel=0.35.1
+  - win_inet_pton=1.1.0
+  - wincertstore=0.2
+  - wrapt=1.13.3
+  - yaml=0.2.5
+  - yarl=1.6.3
+  - zipp=3.6.0
+  - zlib=1.2.11
+  - pip:
+    - selenium==4.0.0
+    - trio-websocket==0.9.2
+    - wsproto==1.0.0
