Modified game choosing mechanism
Refreshed modules and repaired conflicts
Added schedule screenshoting
Added colorful terminal messages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,89 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-_tflow_select=2.3.0=mkl
-abseil-cpp=20210324.2=hd77b12b_0
-absl-py=0.15.0=pyhd3eb1b0_0
-aiohttp=3.8.1=py39h2bbff1b_0
-aiosignal=1.2.0=pyhd3eb1b0_0
-astor=0.8.1=py39haa95532_0
-astroid=2.9.0=py39haa95532_0
-astunparse=1.6.3=py_0
-async-timeout=4.0.1=pyhd3eb1b0_0
-async_generator=1.10=pyhd3eb1b0_0
-attrs=21.2.0=pyhd3eb1b0_0
-autopep8=1.6.0=pyhd3eb1b0_0
-blas=1.0=mkl
-blinker=1.4=py39haa95532_0
-bottleneck=1.3.2=py39h7cc1a96_1
-brotlipy=0.7.0=py39h2bbff1b_1003
-ca-certificates=2021.10.26=haa95532_2
-cachetools=4.2.2=pyhd3eb1b0_0
-certifi=2021.10.8=py39haa95532_0
-cffi=1.15.0=py39h2bbff1b_0
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-click=8.0.3=pyhd3eb1b0_0
-colorama=0.4.4=pyhd3eb1b0_0
-cryptography=3.4.8=py39h71e12ea_0
-dataclasses=0.8=pyh6d0b6a4_7
-et_xmlfile=1.1.0=py39haa95532_0
-flatbuffers=2.0.0=h6c2663c_0
-frozenlist=1.2.0=py39h2bbff1b_0
-gast=0.4.0=pyhd3eb1b0_0
-giflib=5.2.1=h62dcd97_0
-google-auth=1.33.0=pyhd3eb1b0_0
-google-auth-oauthlib=0.4.1=py_2
-google-pasta=0.2.0=pyhd3eb1b0_0
-grpcio=1.42.0=py39hc60d5dd_0
-h11=0.12.0=pyhd3eb1b0_0
-h5py=3.6.0=py39h3de5c98_0
-hdf5=1.10.6=h7ebc959_0
-icc_rt=2019.0.0=h0cc432a_1
-icu=68.1=h6c2663c_0
-idna=3.3=pyhd3eb1b0_0
-importlib-metadata=4.8.2=py39haa95532_0
-intel-openmp=2021.4.0=haa95532_3556
-isort=5.9.3=pyhd3eb1b0_0
-jpeg=9d=h2bbff1b_0
-keras-preprocessing=1.1.2=pyhd3eb1b0_0
-lazy-object-proxy=1.6.0=py39h2bbff1b_0
-libcurl=7.80.0=h86230a5_0
-libpng=1.6.37=h2a8f88b_0
-libprotobuf=3.14.0=h23ce68f_0
-libssh2=1.9.0=h7a1dbc1_1
-markdown=3.3.4=py39haa95532_0
-mccabe=0.6.1=py39haa95532_1
-mkl=2021.4.0=haa95532_640
-mkl-service=2.4.0=py39h2bbff1b_0
-mkl_fft=1.3.1=py39h277e83a_0
-mkl_random=1.2.2=py39hf11a4ad_0
-multidict=5.1.0=py39h2bbff1b_2
-numexpr=2.7.3=py39hb80d3ca_1
-numpy=1.21.2=py39hfca59bb_0
-numpy-base=1.21.2=py39h0829f74_0
-oauthlib=3.1.1=pyhd3eb1b0_0
-openpyxl=3.0.9=pyhd3eb1b0_0
-openssl=1.1.1l=h2bbff1b_0
-opt_einsum=3.3.0=pyhd3eb1b0_1
-outcome=1.1.0=pyhd3eb1b0_0
-pandas=1.3.4=py39h6214cd6_0
-pip=21.2.4=py39haa95532_0
-platformdirs=2.4.0=pyhd3eb1b0_0
-protobuf=3.14.0=py39hd77b12b_1
-pyasn1=0.4.8=pyhd3eb1b0_0
-pyasn1-modules=0.2.8=py_0
-pycodestyle=2.8.0=pyhd3eb1b0_0
-pycparser=2.21=pyhd3eb1b0_0
-pyjwt=2.1.0=py39haa95532_0
-pylint=2.12.2=py39haa95532_0
-pyopenssl=21.0.0=pyhd3eb1b0_1
-pyreadline=2.1=py39haa95532_1
-pysocks=1.7.1=py39haa95532_0
-python=3.9.7=h6244533_1
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-flatbuffers=1.12=pyhd3eb1b0_0
-pytz=2021.3=pyhd3eb1b0_0
-pyyaml=6.0=py39h2bbff1b_1
-requests=2.26.0=pyhd3eb1b0_0
-requests-oauthlib=1.3.0=py_0
-rsa=4.7.2=pyhd3eb1b0_1
-scipy=1.7.1=py39hbe87c03_2
-selenium=4.0.0=pypi_0
-setuptools=58.0.4=py39haa95532_0
-six=1.16.0=pyhd3eb1b0_0
-snappy=1.1.8=h33f27b4_0
-sniffio=1.2.0=py39haa95532_1
-sortedcontainers=2.4.0=pyhd3eb1b0_0
-sqlite=3.36.0=h2bbff1b_0
-tensorboard=2.6.0=py_1
-tensorboard-data-server=0.6.0=py39haa95532_0
-tensorboard-plugin-wit=1.6.0=py_0
-tensorflow=2.6.0=mkl_py39h31650da_0
-tensorflow-base=2.6.0=mkl_py39h9201259_0
-tensorflow-estimator=2.6.0=pyh7b7c402_0
-termcolor=1.1.0=py39haa95532_1
-toml=0.10.2=pyhd3eb1b0_0
-trio=0.18.0=py39haa95532_0
-trio-websocket=0.9.2=pypi_0
-typing-extensions=3.10.0.2=hd3eb1b0_0
-typing_extensions=3.10.0.2=pyh06a4308_0
-tzdata=2021e=hda174b7_0
-urllib3=1.26.7=pyhd3eb1b0_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-werkzeug=2.0.2=pyhd3eb1b0_0
-wheel=0.35.1=pyhd3eb1b0_0
-win_inet_pton=1.1.0=py39haa95532_0
-wincertstore=0.2=py39haa95532_2
-wrapt=1.13.3=py39h2bbff1b_2
-wsproto=1.0.0=pypi_0
-yaml=0.2.5=he774522_0
-yarl=1.6.3=py39h2bbff1b_0
-zipp=3.6.0=pyhd3eb1b0_0
-zlib=1.2.11=h8cc25b3_4
+absl-py==1.0.0
+aniso8601==9.0.1
+astroid @ file:///D:/bld/astroid_1640971042267/work
+astunparse==1.6.3
+async-generator==1.10
+attrs==21.4.0
+autopep8 @ file:///home/conda/feedstock_root/build_artifacts/autopep8_1635267974115/work
+backcall==0.2.0
+cachetools==4.2.4
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.9
+colorama==0.4.4
+cryptography==36.0.1
+decorator==5.0.9
+et-xmlfile==1.0.1
+flatbuffers==2.0
+gast==0.4.0
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.43.0
+h11==0.12.0
+h5py==3.6.0
+idna==3.3
+importlib-metadata==4.10.0
+ipykernel==5.5.5
+ipython==7.23.1
+ipython-genutils==0.2.0
+isort==5.8.0
+jedi==0.18.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+lazy-object-proxy==1.6.0
+libclang==12.0.0
+Markdown==3.3.6
+matplotlib-inline==0.1.2
+mccabe==0.6.1
+numpy @ file:///D:/bld/numpy_1640083359858/work
+oauthlib==3.1.1
+openpyxl @ file:///home/conda/feedstock_root/build_artifacts/openpyxl_1632332968451/work
+opt-einsum==3.3.0
+outcome==1.1.0
+pandas @ file:///D:/bld/pandas_1639398467125/work
+parso==0.8.2
+pickleshare==0.7.5
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1630400214373/work
+prompt-toolkit==3.0.18
+protobuf==3.19.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle @ file:///home/conda/feedstock_root/build_artifacts/pycodestyle_1633982426610/work
+pycparser==2.21
+Pygments==2.9.0
+pylint @ file:///home/conda/feedstock_root/build_artifacts/pylint_1638563695852/work
+pyOpenSSL==21.0.0
+python-dateutil==2.8.1
+python-dotenv==0.17.0
+pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1633452062248/work
+PyYAML==6.0
+pyzmq==22.0.3
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.8
+selenium==4.0.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+sniffio==1.2.0
+sortedcontainers==2.4.0
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.7.0
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.23.1
+termcolor==1.1.0
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+trio==0.19.0
+trio-websocket==0.9.2
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1638334978229/work
+urllib3==1.26.7
+wcwidth==0.2.5
+Werkzeug==2.0.2
+wrapt==1.12.1
+wsproto==1.0.0
+zipp==3.7.0
