--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 absl-py==1.0.0
 aniso8601==9.0.1
-astroid @ file:///D:/bld/astroid_1640971042267/work
+astroid==2.9.1
 astunparse==1.6.3
 async-generator==1.10
 attrs==21.4.0
-autopep8 @ file:///home/conda/feedstock_root/build_artifacts/autopep8_1635267974115/work
+autopep8==1.6.0
 backcall==0.2.0
 cachetools==4.2.4
 certifi==2021.10.8
@@ -38,34 +38,36 @@ libclang==12.0.0
 Markdown==3.3.6
 matplotlib-inline==0.1.2
 mccabe==0.6.1
-numpy @ file:///D:/bld/numpy_1640083359858/work
+numpy==1.21.5
 oauthlib==3.1.1
-openpyxl @ file:///home/conda/feedstock_root/build_artifacts/openpyxl_1632332968451/work
+openpyxl==3.0.9
 opt-einsum==3.3.0
 outcome==1.1.0
-pandas @ file:///D:/bld/pandas_1639398467125/work
+pandas==1.3.5
 parso==0.8.2
 pickleshare==0.7.5
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1630400214373/work
+pip==21.3.1
+platformdirs==2.3.0
 prompt-toolkit==3.0.18
 protobuf==3.19.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle @ file:///home/conda/feedstock_root/build_artifacts/pycodestyle_1633982426610/work
+pycodestyle==2.8.0
 pycparser==2.21
 Pygments==2.9.0
-pylint @ file:///home/conda/feedstock_root/build_artifacts/pylint_1638563695852/work
+pylint==2.12.2
 pyOpenSSL==21.0.0
 python-dateutil==2.8.1
 python-dotenv==0.17.0
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1633452062248/work
+pytz==2021.3
 PyYAML==6.0
 pyzmq==22.0.3
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.8
 selenium==4.0.0
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+setuptools==60.2.0
+six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 tensorboard==2.7.0
@@ -80,10 +82,11 @@ tornado==6.1
 traitlets==5.0.5
 trio==0.19.0
 trio-websocket==0.9.2
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1638334978229/work
+typing_extensions==4.0.1
 urllib3==1.26.7
 wcwidth==0.2.5
 Werkzeug==2.0.2
+wheel==0.37.1
 wrapt==1.12.1
 wsproto==1.0.0
 zipp==3.7.0
