--- a/environment.yml
+++ b/environment.yml
@@ -3,12 +3,19 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - astroid=2.9.1
-  - autopep8=1.6.0
+  - astroid=2.9.3
+  - async_generator=1.10
+  - attrs=21.4.0
+  - brotlipy=0.7.0
   - bzip2=1.0.8
   - ca-certificates=2021.10.8
+  - certifi=2021.10.8
+  - cffi=1.15.0
   - colorama=0.4.4
+  - cryptography=36.0.1
   - et_xmlfile=1.0.1
+  - h11=0.12.0
+  - idna=3.3
   - intel-openmp=2022.0.0
   - isort=5.10.1
   - lazy-object-proxy=1.7.1
@@ -18,85 +25,45 @@ dependencies:
   - liblapack=3.9.0
   - libzlib=1.2.11
   - mccabe=0.6.1
-  - mkl=2021.4.0
-  - numpy=1.21.5
+  - mkl=2022.0.0
+  - numpy=1.22.2
   - openpyxl=3.0.9
-  - openssl=3.0.0
-  - pandas=1.3.5
-  - pip=21.3.1
-  - platformdirs=2.3.0
-  - pycodestyle=2.8.0
+  - openssl=1.1.1l
+  - outcome=1.1.0
+  - pandas=1.4.1
+  - pip=22.0.3
+  - platformdirs=2.5.0
+  - pycparser=2.21
   - pylint=2.12.2
+  - pyopenssl=22.0.0
+  - pysocks=1.7.1
   - python=3.9.9
   - python-dateutil=2.8.2
   - python_abi=3.9
   - pytz=2021.3
   - pyyaml=6.0
-  - setuptools=60.2.0
+  - selenium=4.1.0
+  - setuptools=60.9.3
   - six=1.16.0
+  - sniffio=1.2.0
+  - sortedcontainers=2.4.0
   - sqlite=3.37.0
   - tbb=2021.5.0
-  - tk=8.6.11
+  - tk=8.6.12
   - toml=0.10.2
-  - typing-extensions=4.0.1
-  - typing_extensions=4.0.1
+  - trio=0.19.0
+  - trio-websocket=0.9.2
+  - typing-extensions=4.1.1
+  - typing_extensions=4.1.1
   - tzdata=2021e
   - ucrt=10.0.20348.0
+  - urllib3=1.26.8
   - vc=14.2
   - vs2015_runtime=14.29.30037
   - wheel=0.37.1
+  - win_inet_pton=1.1.0
   - wrapt=1.13.3
+  - wsproto=1.0.0
   - xz=5.2.5
   - yaml=0.2.5
-  - pip:
-    - absl-py==1.0.0
-    - astunparse==1.6.3
-    - async-generator==1.10
-    - attrs==21.4.0
-    - cachetools==4.2.4
-    - certifi==2021.10.8
-    - cffi==1.15.0
-    - charset-normalizer==2.0.9
-    - cryptography==36.0.1
-    - flatbuffers==2.0
-    - gast==0.4.0
-    - google-auth==2.3.3
-    - google-auth-oauthlib==0.4.6
-    - google-pasta==0.2.0
-    - grpcio==1.43.0
-    - h11==0.12.0
-    - h5py==3.6.0
-    - idna==3.3
-    - importlib-metadata==4.10.0
-    - keras==2.7.0
-    - keras-preprocessing==1.1.2
-    - libclang==12.0.0
-    - markdown==3.3.6
-    - oauthlib==3.1.1
-    - opt-einsum==3.3.0
-    - outcome==1.1.0
-    - protobuf==3.19.1
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pycparser==2.21
-    - pyopenssl==21.0.0
-    - requests==2.26.0
-    - requests-oauthlib==1.3.0
-    - rsa==4.8
-    - selenium==4.0.0
-    - sniffio==1.2.0
-    - sortedcontainers==2.4.0
-    - tensorboard==2.7.0
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.0
-    - tensorflow==2.7.0
-    - tensorflow-estimator==2.7.0
-    - tensorflow-io-gcs-filesystem==0.23.1
-    - termcolor==1.1.0
-    - trio==0.19.0
-    - trio-websocket==0.9.2
-    - urllib3==1.26.7
-    - werkzeug==2.0.2
-    - wsproto==1.0.0
-    - zipp==3.7.0
 prefix: C:\Users\iwos0\.conda\envs\revasbot
