--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,41 @@
-absl-py==1.0.0
-aniso8601==9.0.1
-astroid==2.9.1
-astunparse==1.6.3
+astroid==2.9.3
 async-generator==1.10
 attrs==21.4.0
-autopep8==1.6.0
-backcall==0.2.0
-cachetools==4.2.4
+brotlipy==0.7.0
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.9
 colorama==0.4.4
 cryptography==36.0.1
-decorator==5.0.9
 et-xmlfile==1.0.1
-flatbuffers==2.0
-gast==0.4.0
-google-auth==2.3.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.43.0
 h11==0.12.0
-h5py==3.6.0
 idna==3.3
-importlib-metadata==4.10.0
-ipykernel==5.5.5
-ipython==7.31.1
-ipython-genutils==0.2.0
-isort==5.8.0
-jedi==0.18.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-keras==2.7.0
-Keras-Preprocessing==1.1.2
-lazy-object-proxy==1.6.0
-libclang==12.0.0
-Markdown==3.3.6
-matplotlib-inline==0.1.2
+isort==5.10.1
+lazy-object-proxy==1.7.1
 mccabe==0.6.1
-numpy==1.21.5
-oauthlib==3.1.1
+numpy==1.22.2
 openpyxl==3.0.9
-opt-einsum==3.3.0
 outcome==1.1.0
-pandas==1.3.5
-parso==0.8.2
-pickleshare==0.7.5
-pip==21.3.1
-platformdirs==2.3.0
-prompt-toolkit==3.0.18
-protobuf==3.19.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.8.0
+pandas==1.4.1
+pip==22.0.3
+platformdirs==2.5.0
 pycparser==2.21
-Pygments==2.9.0
 pylint==2.12.2
-pyOpenSSL==21.0.0
-python-dateutil==2.8.1
-python-dotenv==0.17.0
+pyOpenSSL==22.0.0
+PySocks==1.7.1
+python-dateutil==2.8.2
 pytz==2021.3
 PyYAML==6.0
-pyzmq==22.0.3
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.8
-selenium==4.0.0
-setuptools==60.2.0
+selenium==4.1.0
+setuptools==60.9.3
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.8.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.23.1
-termcolor==1.1.0
 toml==0.10.2
-tornado==6.1
-traitlets==5.0.5
 trio==0.19.0
 trio-websocket==0.9.2
-typing_extensions==4.0.1
-urllib3==1.26.7
-wcwidth==0.2.5
-Werkzeug==2.0.2
+typing_extensions==4.1.1
+urllib3==1.26.8
 wheel==0.37.1
-wrapt==1.12.1
+win-inet-pton==1.1.0
+wrapt==1.13.3
 wsproto==1.0.0
-zipp==3.7.0
